crates/escalier_old_parser/src/snapshots/escalier_parser__tests__template_literals-6.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"`line 1\\\\nline 2\\\\nline 3`\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 24,
                    },
                },
                span: 0..24,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 24,
                            },
                        },
                        span: 0..24,
                        kind: TemplateLiteral(
                            TemplateLiteral {
                                exprs: [],
                                quasis: [
                                    TemplateElem {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 24,
                                            },
                                        },
                                        span: 1..23,
                                        raw: Str(
                                            Str {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 24,
                                                    },
                                                },
                                                span: 1..23,
                                                value: "line 1\\nline 2\\nline 3",
                                            },
                                        ),
                                        cooked: Str(
                                            Str {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 24,
                                                    },
                                                },
                                                span: 1..23,
                                                value: "line 1\nline 2\nline 3",
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
