crates/escalier_old_parser/src/snapshots/escalier_parser__tests__type_annotations-2.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let msg: string = \\\"hello\\\";\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 26,
                    },
                },
                span: 0..26,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 7,
                                },
                            },
                            span: 4..7,
                            kind: Ident(
                                BindingIdent {
                                    name: "msg",
                                    mutable: false,
                                    span: 4..7,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 7,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: Some(
                            TypeAnn {
                                kind: Keyword(
                                    KeywordType {
                                        keyword: String,
                                    },
                                ),
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 15,
                                    },
                                },
                                span: 9..15,
                                inferred_type: None,
                            },
                        ),
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 18,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 25,
                                    },
                                },
                                span: 18..25,
                                kind: Lit(
                                    Str(
                                        Str {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 18,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 25,
                                                },
                                            },
                                            span: 18..25,
                                            value: "hello",
                                        },
                                    ),
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
